--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="confirm_log_out_message_insta">Are you sure you want to log out from Instagram, you won\'t be able to view stories unless you login again.</string>
     <string name="log_out">Log out</string>
     <string name="cancel">Cancel</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
