--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="click_share_to">Click share to</string>
     <string name="select_asaver_app">Select Asaver app</string>
     <string name="click_download">Click download</string>
+    <string name="no_data_found">No data found</string>
 </resources>
